# finitedifferencemethod

./: CMakeLists.txt
algebra/: Mesh1d.h  UniformMesh.h  matrix.h
algebra/details/: Mesh1d.cpp  UniformMesh.cpp  matrix.cpp
equation/: equation.h
equation/details/: equation.cpp
solver/: solver.h
solver/details/: solver.cpp  sweep_method.cpp  zeidel.cpp
start/: main  main.cpp
